# photomanagement

./: .gitignore  .gitlab-ci.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  app.py  coverage.cfg  environment.yml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  start.sh
PhotoManagement/: Address.py  AirtableManager.py  Album.py  Face.py  FaceEngine.py  Image.py  LogFormatter.py  MatchingCandidate.py  Person.py  Photo.py  User.py  __init__.py  _old.old  _old.py  config.py  db.py  main.py  update_person_name.py
PhotoManagement/blueprints/carte/: __init__.py  routes.py
PhotoManagement/blueprints/carte/templates/: carte.html
PhotoManagement/blueprints/photo/: __init__.py  routes.py  utils.py
PhotoManagement/blueprints/photo/templates/: list_all.html  list_day.html  list_month.html  list_year.html  personnes.html  photo.html
PhotoManagement/blueprints/recherche/: __init__.py  routes.py
PhotoManagement/blueprints/recherche/templates/: recherche.html  resultats.html
PhotoManagement/blueprints/users/: __init__.py  forms.py  routes.py
PhotoManagement/blueprints/users/templates/: login.html
PhotoManagement/utils/: db.py
docs/: conf.py  index.rst  install.rst  requirements.txt
etc/: photomanagement.service  pmg.conf  pmg_uwsgi.ini
proto/: Image.py  db.py  main.py  qt_test.py
tests/: qtest.py  test_faceengine.py  test_import.py  test_main.py  test_map.py  test_map_flask.py  test_map_qt.py  test_person.py  test_recog.py
