[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
name = PhotoManagement
author = Yann de The
author_email = ydethe@gmail.com
home-page = https://gitlab.com/ydethe/photomanagement
description = A library to simulate a closed-loop system
long-description = file: README.rst
license = MIT license
license-file = LICENSE
version = 0.1.0
platform = any
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.5
	Topic :: Software Development :: Libraries :: Python Modules
url = https://gitlab.com/ydethe/photomanagement

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
packages = find:

setup_requires =
	setuptools >=38.3.0
	wheel >=0.29.0
tests_require =
	tox
	pytest

[options.entry_points]
console_scripts =
    photo-management = PhotoManagement.main:main

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = gztar

[tox]
envlist = py,flake8

[testenv]
setenv =
	PYTHONPATH ~= {toxinidir}{:}{toxinidir}/tests
deps =
    Pillow
	numpy
	pytest-cov
	pytest
	coverage
	tqdm
whitelist_externals =
	mkdir
	coverage
commands =
	mkdir -p test-results
	python -m pytest --cov-report xml:test-results/coverage.xml --cov-config=coverage.cfg --cov PhotoManagement tests --junitxml=test-results/junit.xml --doctest-modules PhotoManagement
	coverage html

[tool:pytest]
junit_family = xunit2

[testenv:flake8]
skip_install = true
deps =
	flake8
	flake8-bugbear
	flake8-colors
	flake8-junit-report
	flake8-docstrings
	flake8-import-order
	pep8-naming
commands =
	mkdir -p test-results
	flake8 --exit-zero PhotoManagement tests/ setup.py --output-file=test-results/flake8_report.log
	flake8_junit test-results/flake8_report.log test-results/flake8_junit.xml

[flake8]
ignore = D203, W503, E203
exclude =
	.tox,
	.git,
	__pycache__,
	docs/conf.py,
	build,
	dist,
	tests/fixtures/*,
	*.pyc,
	*.egg-info,
	.cache,
	.eggs
max-complexity = 10
import-order-style = google
application-import-names = flake8
